# ticker_analysis

./: README.md  pyproject.toml
notebooks/: eda1.ipynb
